# mc_afk_bot

./: Cargo.toml  README.md
src/: asyncio.rs  bot.rs  client.rs  clone_all.rs  datatypes.rs  foods.rs  main.rs  mobs.rs  packets.rs
