[package]
name = "mc_afk_bot"
version = "1.0.0"
authors = ["Ponas <mykolas.peteraitis@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.13.1", features = ["full"] }
flate2 = { version = "1.0", features = ["tokio", "zlib"] }
async-trait = "0.1.41"
futures = "0.1"
tokio-io = "0.1"
bimap = "0.5.3"
lazy_static = "1.4"
fltk = "0.11"
chrono = "0.4"